Fixed the bug in dark mode for instructions #17498
Instructions-content text now stays in one column

--- a/Shared/css/blackTheme.css
+++ b/Shared/css/blackTheme.css
@@ -632,6 +632,7 @@ body {
 
 .instructions-content{
     border: 1px solid  var(--color-sectioned-table-lo);
+    column-count: 1 !important;
 } 
 
 .feedback-button:hover:after, .instructions-button:hover:after {
